# daylio

./: Cargo.toml  README.md
src/: error.rs  lib.rs  mood.rs  parse.rs
tests/: parse.rs
